k8s/01-website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: surfhouse
  namespace: website
spec:
  type: ClusterIP
  selector:
    app: surfhouse
  ports:
    - port: 80
      targetPort: 80
