k8s/01-website/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: surfhouse
  namespace: website
spec:
  ingressClassName: nginx
  rules:
    - host: surfhouse.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: surfhouse-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: surfhouse
                port:
                  number: 80
